--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-[8:35 pm, 23/10/2025] ChatGPT: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -25,7 +25,7 @@
 
   <div class="search-container">
     <button onclick="toggleSearch()">🔍</button>
-[8:35 pm, 23/10/2025] ChatGPT: <input type="text" id="searchBar" placeholder="Search..." oninput="searchText()" />
+<input type="text" id="searchBar" placeholder="Search..." oninput="searchText()" />
   </div>
 
   <div class="content">
